# homelab

./: .gitignore  AGENTS.md  README.md
.github/workflows/: chelseas-plate.yml  devops.yml  vicinity.yml
apps/chelseas-plate/: .env.local  AGENTS.md  README.md  package-lock.json  package.json  vitest.setup.ts
apps/devops/: Dockerfile  package-lock.json  package.json
apps/osrs-flip-recommender/: Dockerfile  README.md  pyproject.toml  temp.txt
apps/osrs-flip-recommender/src/osrs_flip_recommender/: __init__.py  main.py
apps/osrs-flip-recommender/tests/: test_recommender.py
apps/vicinity/: AGENTS.md  README.md  package-lock.json  package.json  vitest.config.ts
first-namespace/: deployment.yaml  ingress.yaml  svc.yaml
flux/: kustomization.yaml
flux/chelseas-plate/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
flux/default/: deployment.yaml  ingress.yaml  service.yaml
flux/devops/: deployment.yaml  ingress.yaml  service.yaml
flux/flux-system/: gotk-sync.yaml
flux/freshrss/: deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
flux/kube-system/: traefik-config.yaml
flux/metallb/: config.yaml  namespace.yaml
flux/metallb-system/: release.yaml
flux/monitoring/: grafana-tailnet-service.yaml  kustomization.yaml  release.yaml
flux/ntfy/: configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
flux/osrs-flips/: cronjob.yaml  namespace.yaml
flux/tailscale/: release.yaml  repository.yaml
flux/vicinity/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
supabase/chelseas-plate/: seed.sql
(+53 files in other folders)
