[project]
name = "osrs-flip-recommender"
version = "0.1.0"
description = "Daily OSRS Grand Exchange flip recommender"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]

[project.scripts]
osrs-flip-recommender = "osrs_flip_recommender.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
